  - Upgrade to smarty v3.1.32
  - CURL is now a requirement
  - ZipArchive is now a requirement (at least for the installer)
  - no longer change the config file on upgrade.  Though we will for install and freshen.
  - Now install default theme from a zip file into the /assets/simplex directory (hardcoded)
  - Now install default content from an XML file exported by CGCU

ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.

FileManager v1.6.4
  - modified to use CMS_ROOT_URL
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).
  - Now use CMSMS error console when displaying filepicker exceptions (no uncaught exceptions)

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.
  - No longer set the size attribute on the input field, use CSS

AdminLog
  - New core module to replace the adminlog.php file

Search  - v1.52
  - FEATURE: Now exports a command for cmscli
  - The search results now contain _content_ and the page id for content pages.
  - Removes all support for events, now uses hooks

AdminSearch v1.0.5
 - Rationalize the code a bit (remove un-necessary files).
 - Now optionally use a hook to get search slaves.
 - Optmization to the gathering of slaves.

DesignManager v1.1.6
 - Now properly handle renaming exported stylesheets and templates.
 - Now only reads {Navigator} tags, will not read {cms_module module=Navigator} tags (for a bit).
 - PHP 7 fixes
 - Minor template fixes in design list.

Navigator v1.0.9
 - Adds the title property to each node.

CmsJobManager v0.3
 - Now uses CURL initiate asynchronous requests
 - Removes all support for events, now uses hooks

Version 2.2.6 - NO NAME SET
----------------------------------
Core - General
  - Fixes to AdminAlerts::load_by_name()

Search